# ENUMGRID

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  purple_recon.py  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml  start.sh  test_purple_recon.py
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: README.md  adscan.py  app.py  audit.py  campaign.py  cloudscan.py  copilot.py  credscan.py  cve.py  discovery.py  fingerprint.py  history.py  jobs.py  mdns.py  models.py  nbns.py  notify.py  obs.py  osfp.py  osv.py  passive.py  provenance.py  report.py  requirements.txt  scanner.py  schedule.py  security.py  snmp.py  ssdp.py  test_adscan.py  test_api.py  test_cloudscan.py  test_credscan.py  test_cve.py  test_discovery.py  test_fingerprint.py  test_jobs.py  test_mdns.py  test_osfp.py  test_osv.py  (+9 more)
backend/tests/: test_adscan.py  test_api.py  test_audit.py  test_campaign.py  test_cloudscan.py  test_copilot.py  test_credscan.py  test_cve.py  test_discovery.py  test_fuzz.py  test_golden.py  test_history.py  test_jobs.py  test_mdns.py  test_nbns.py  test_notify.py  test_obs.py  test_osfp.py  test_osv.py  test_passive.py  test_provenance.py  test_rbac.py  test_report.py  test_scanner.py  test_schedule.py  test_security.py  test_snmp.py  test_ssdp.py  test_threatintel.py  test_vulndb.py  test_webscan.py
backend/tests/fixtures/: nmap_sample.golden.json  nmap_sample.xml
docs/: ACCURACY.md  ARCHITECTURE.md  CONTRIBUTIONS.md  COPILOT.md  ENUMGRID_Defense.pptx  ENUMGRID_Paper.docx  ENUMGRID_Security_Audit_Report.docx  EVALUATION.md  PAPER.md  REPRODUCE.md  THREAT_MODEL.md  USER_STUDY_PROTOCOL.md
docs/screenshots/: README.md  redact.py
evaluation/: COLLECTING_NETWORKS.md  README.md  aggregate_runs.py  benchmark.py  copilot_eval.py  cve_baselines.py  cve_corpus.json  cve_precision.py  detection_benchmark.py  docker-compose.yml  ground_truth.json  nvd_corpus.json  nvd_corpus_heldout.json  nvd_precision.py  scalability_benchmark.py  test_aggregate_runs.py  test_benchmark.py  test_copilot_eval.py  test_cve_baselines.py  test_cve_precision.py  test_detection_benchmark.py  test_nvd_precision.py  test_scalability_benchmark.py
evaluation/results/: README.md  benchmark_172-16-2.json  benchmark_172-28.json  cve_baselines_172-28.json  cve_precision.json  detection_172-28.json  llama3.2.json  llama3.2_x5.json  nvd_live.json  pooled_recall.json  qwen2.5.json  scalability_172-16-2.json
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.setup.js
frontend/src/: App.jsx  CopilotPanel.jsx  ErrorBoundary.jsx  IndustrialDashboard.jsx  index.css
frontend/src/context/: ScanContext.jsx
frontend/src/lib/: auth.js  auth.test.js  commandFilter.js  commandFilter.test.js  copilot.js  copilot.test.js  exporters.js  exporters.test.js  markdown.js  markdown.test.js  mockScanEngine.js  mockScanEngine.test.js  operations.js  operations.test.js  preferences.js  preferences.test.js  privilege.js  privilege.test.js  schema.js  schema.test.js  shortcuts.js  shortcuts.test.js  toast.jsx  toast.provider.test.jsx  toast.test.js  useFocusTrap.dom.test.jsx  useFocusTrap.js  useFocusTrap.test.js
scripts/: dev.sh  screenshot.mjs
tests/: test_purple_recon.py  test_purple_recon_coverage.py
