[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "purplerecon"
version = "1.0.0"
description = "Two-tiered purple-team network enumeration cockpit — Angry-IP-style device discovery plus nmap service/vuln depth, in one terminal UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Authorized / educational use only" }
authors = [{ name = "santhakumarParivallal" }]
keywords = ["security", "network", "enumeration", "nmap", "discovery", "purple-team", "asset-inventory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
]

# The CLI needs only `rich`; nmap is optional and degrades to a built-in socket
# scanner when absent. Install extras for the FastAPI web cockpit.
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
nmap = ["python-nmap>=0.7.1"]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-nmap>=0.7.1",
    "reportlab>=4.0",
    "zeroconf>=0.130",
]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://example.com/purplerecon"

[project.scripts]
purplerecon = "purple_recon:cli"

# Single-file module (not a package directory).
[tool.setuptools]
py-modules = ["purple_recon"]

# Bandit (SAST). The skips below are *reviewed and accepted*, with rationale:
#   B404/B603/B607 — a network-enumeration tool must shell out to ping/arp/ndp/
#     nmap. Every call uses list-form args (never shell=True), and the only
#     externally-influenced value (the scan target) is validated by
#     ScopeValidator / the anti-injection regex before it can reach a command.
#   B110            — a few deliberately best-effort try/except/pass blocks
#     (mDNS, history persistence) that must never break a scan.
#   B101/B104       — asserts and the "0.0.0.0" target string appear only in the
#     test suite, not in shipped code.
# The two genuine findings (B310 OUI download, B608 SQL) are fixed inline with
# justified `# nosec` markers, so medium/high issues elsewhere still fail CI.
[tool.bandit]
skips = ["B101", "B104", "B110", "B404", "B603", "B607"]
